--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon src/app.js"
+    "test": "nodemon src/app.js"
   },
   "dependencies": {
     "ejs": "~2.6.1",
