--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "ejs": "~2.6.1",
     "express": "~4.16.1",
     "express-load": "^1.1.16",
+    "express-validator": "^6.14.3",
     "method-override": "^3.0.0",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.20"
