--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "express-validator": "^6.14.3",
     "method-override": "^3.0.0",
     "multer": "^1.4.5-lts.1",
-    "nodemon": "^2.0.20"
+    "mysql2": "^3.2.0",
+    "nodemon": "^2.0.20",
+    "sequelize": "^6.29.0"
   }
 }
